Allow usage with java 8